Добавляет разметку index.html

--- a/index.html
+++ b/index.html
@@ -2,11 +2,105 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: Нёрдс</title>
+    <title>Дизайн-студия «Нёрдс»</title>
   </head>
   <body>
+    <header>
+      <nav>
+        <a href="#"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
+        <ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+          <li><a href="#">Корзина</a></li>
+        </ul>
+      </nav>
+    </header>
+    <main>
+      <h1>Сайт дизайн-студии «Nerds»</h1>
+        <section>
+          <h2>Описание услуг</h2>
+          <p><strong>Долго, дорого, скрупулезно.</strong></p>
+          <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
+          <a href="#">УЗНАТЬ БОЛЬШЕ</a>
+        </section>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS, уровень 1</a>».</p>
+        <section>
+          <h2>Список услуг</h2>
+          <ul>
+            <li>
+              <h2>Веб-сайты</h2>
+              <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
+              <a href="#">ЗАКАЗАТЬ</a>
+            </li>
+            <li>
+              <h2>Приложения</h2>
+              <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+              <a href="#">ЗАКАЗАТЬ</a>
+            </li>
+            <li>
+              <h2>Презентации</h2>
+              <p>Вы даже не подозреваете, насколько вы изумительны!</p>
+              <a href="#">ЗАКАЗАТЬ</a>
+            </li>
+          </ul>
+        </section>
 
+        <section>
+          <h2>Информация о компании</h2>
+          <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+          <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
+          <p><b>Выполняем заказы на разработку:</b></p>
+            <ul>
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильных приложений для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+        </section>
+
+        <section>
+          <h2>Статистика компании</h2>
+          <img src="img/nerds-illustration-1.png" alt="Логотип дизайн-студии «Nerds»" width="360" height="208">
+          <p><b>с 2004 года Любим точность во всем:</b></p>
+            <dl>
+              <dt>Уровень самоотдачи</dt>
+              <dd>146 <sup>%</sup></dd>
+              <dt>Соблюдение сроков</dt>
+              <dd>100 <sup>%</sup></dd>
+              <dt>Минимальная предоплата</dt>
+              <dd>50 <sup>%</sup></dd>
+            </dl>
+        </section>
+
+        <section>
+          <h2>Проекты компании</h2>
+          <ul>
+            <li><a href="#"><img src="img/pr-ha-logo.svg" alt="HTML Academy" width="200" height="68"></a></li>
+            <li><a href="#"><img src="img/pr-borodinski-logo.svg" alt="Барбершоп Бородинский" width="209" height="90"></a></li>
+            <li><a href="#"><img src="img/pr-pink-logo.svg" alt="Оптика Пинк" width="185" height="52"></a></li>
+            <li><a href="#"><img src="img/pr-mishka-logo.svg" alt="Заводные медведи Мишка" width="173" height="84"></a></li>
+          </ul>
+        </section>
+
+        <footer>
+          <!--Карта-->
+          <div>
+            <p><b>NЁRDS DESIGN STUDIO</b></p>
+            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+            <p>тел.<a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+            <a href="#">НАПИШИТЕ НАМ</a>
+          </div>
+          <ul>
+            <li><a href="#"><img src="#" alt="Вконтакте"></a></li>
+            <li><a href="#"><img src="#" alt="Фейсбук"></a></li>
+            <li><a href="#"><img src="#" alt="Инстаграм"></a></li>
+          </ul>
+          <div>
+            <p>Давайте дружить, это выгодно!</p>
+            <p>Скидка 10% для друзей из социальных сетей.</p>
+          </div>
+        </footer>
+    </main>
   </body>
 </html>
