Добавляет внутреннюю страницу Исправляет названия проектов на главной странице

--- a/index.html
+++ b/index.html
@@ -78,8 +78,8 @@
           <ul>
             <li><a href="#"><img src="img/pr-ha-logo.svg" alt="HTML Academy" width="200" height="68"></a></li>
             <li><a href="#"><img src="img/pr-borodinski-logo.svg" alt="Барбершоп Бородинский" width="209" height="90"></a></li>
-            <li><a href="#"><img src="img/pr-pink-logo.svg" alt="Оптика Пинк" width="185" height="52"></a></li>
-            <li><a href="#"><img src="img/pr-mishka-logo.svg" alt="Заводные медведи Мишка" width="173" height="84"></a></li>
+            <li><a href="#"><img src="img/pr-pink-logo.svg" alt="Приложение Пинк" width="185" height="52"></a></li>
+            <li><a href="#"><img src="img/pr-mishka-logo.svg" alt="Вязаные штуки Мишка" width="173" height="84"></a></li>
           </ul>
         </section>
 
