Добавляет описание и стоимость Седона

--- a/catalog.html
+++ b/catalog.html
@@ -95,6 +95,9 @@
                     <h3>Туристический городок Седона</h3>
                     <img src="img/catalog/catalog-sedona-1.png" alt="превью Седона" width="359" height="578">
                   </a>
+                  <p>Информационный сайт для туристов</p>
+                  <a href="#">9 900 &#8381;</a>
+              </div>
                 </li>
                 <li>
                   <a href="#">
