Добавляет ссылки согласно ТЗ

--- a/catalog.html
+++ b/catalog.html
@@ -21,7 +21,7 @@
       <h1>Магазин готовых шаблонов</h1>
         <section>
           <h2>Фильтр шаблонов</h2>
-          <form action="#" method="get">
+          <form action="https://echo.htmlacademy.ru/" method="get">
             <fieldset>
               <legend>Стоимость:</legend>
                 <div>
