Делает блок статистики таблицей Выносит карту из футера Убирает апперкейс из html Исправляет дивы в каталоге

--- a/catalog.html
+++ b/catalog.html
@@ -7,11 +7,11 @@
   <body>
     <header>
       <nav>
-        <a href="#"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
+        <a href="index.html"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
         <ul>
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
-          <li><a href="catalog.html">Магазин</a></li>
+          <li><a href="#">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
           <li><a href="#">Корзина</a></li>
         </ul>
@@ -74,7 +74,7 @@
                 </li>
               </ul>
             </fieldset>
-            <button type="submit">ПОКАЗАТЬ</button>
+            <button type="submit">Показать</button>
           </form>
         </section>
 
@@ -83,54 +83,63 @@
             <div>
               <p>Сортировать:</p>
               <ul>
-                <li><a href="#">ПО ЦЕНЕ</a></li>
-                <li><a href="#">ПО ТИПУ</a></li>
-                <li><a href="#">ПО НАЗВАНИЮ</a></li>
+                <li><a href="#">По цене</a></li>
+                <li><a href="#">По типу</a></li>
+                <li><a href="#">По названию</a></li>
               </ul>
             </div>
-            <div>
               <ul>
                 <li>
-                  <a href="#">
-                    <h3>Туристический городок Седона</h3>
-                    <img src="img/catalog/catalog-sedona-1.png" alt="превью Седона" width="359" height="578">
-                  </a>
-                  <p>Информационный сайт для туристов</p>
-                  <a href="#">9 900 &#8381;</a>
+                  <div>
+                    <a href="#">
+                      <h3>Туристический городок Седона</h3>
+                      <img src="img/catalog/catalog-sedona-1.png" alt="превью Седона" width="359" height="578">
+                    </a>
+                    <p>Информационный сайт для туристов</p>
+                    <a href="#">9 900 &#8381;</a>
+                  </div>
                 </li>
                 <li>
-                  <a href="#">
-                    <h3>Барбершоп Бородинский</h3>
-                    <img src="img/catalog/catalog-borodinski-1.png" alt="превью Бородинский" width="358" height="578">
-                  </a>
+                  <div>
+                    <a href="#">
+                      <h3>Барбершоп Бородинский</h3>
+                      <img src="img/catalog/catalog-borodinski-1.png" alt="превью Бородинский" width="358" height="578">
+                    </a>
+                  </div>
                 </li>
                 <li>
-                  <a href="#">
-                    <h3>Курсы А Плюс</h3>
-                    <img src="img/catalog/catalog-aplus-1.png" alt="превью А Плюс" width="359" height="578">
-                  </a>
+                  <div>
+                    <a href="#">
+                      <h3>Курсы А Плюс</h3>
+                      <img src="img/catalog/catalog-aplus-1.png" alt="превью А Плюс" width="359" height="578">
+                    </a>
+                  </div>
                 </li>
                 <li>
-                  <a href="#">
-                    <h3>Приложение Пинк</h3>
-                    <img src="img/catalog/catalog-pink-1.png" alt="превью Пинк" width="358" height="578">
-                  </a>
+                  <div>
+                    <a href="#">
+                      <h3>Приложение Пинк</h3>
+                      <img src="img/catalog/catalog-pink-1.png" alt="превью Пинк" width="358" height="578">
+                    </a>
+                  </div>
                 </li>
                 <li>
-                  <a href="#">
-                    <h3>Вязаные штуки Мишка</h3>
-                    <img src="img/catalog/catalog-mishka-1.png" alt="превью Мишка" width="359" height="578">
-                  </a>
+                  <div>
+                    <a href="#">
+                      <h3>Вязаные штуки Мишка</h3>
+                      <img src="img/catalog/catalog-mishka-1.png" alt="превью Мишка" width="359" height="578">
+                    </a>
+                  </div>
                 </li>
                 <li>
-                  <a href="#">
-                    <h3>Крафтовый квас Кваст</h3>
-                    <img src="img/catalog/catalog-kvast-1.png" alt="превью Кваст" width="359" height="578">
-                  </a>
+                  <div>
+                    <a href="#">
+                      <h3>Крафтовый квас Кваст</h3>
+                      <img src="img/catalog/catalog-kvast-1.png" alt="превью Кваст" width="359" height="578">
+                    </a>
+                  </div>
                 </li>
               </ul>
-            </div>
-            <div>
               <ul>
                 <li>
                   <a>1</a>
@@ -145,17 +154,17 @@
                   <a href="#">Следующая</a>
                 </li>
               </ul>
-          </div>
         </section>
 
+        <!--Карта-->
+        <div>
+          <p><b>NЁRDS DESIGN STUDIO</b></p>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел.<a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+          <a href="#">Напишите нам</a>
+        </div>
+
         <footer>
-          <!--Карта-->
-          <div>
-            <p><b>NЁRDS DESIGN STUDIO</b></p>
-            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <p>тел.<a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-            <a href="#">НАПИШИТЕ НАМ</a>
-          </div>
           <ul>
             <li><a href="#"><img src="#" alt="Вконтакте"></a></li>
             <li><a href="#"><img src="#" alt="Фейсбук"></a></li>
