--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
           <h2>Описание услуг</h2>
           <p><strong>Долго, дорого, скрупулезно.</strong></p>
           <p>Математически выверенный дизайн для вашего сайта или мобильного приложения.</p>
-          <a href="#">УЗНАТЬ БОЛЬШЕ</a>
+          <a href="#">Узнать больше</a>
         </section>
 
         <section>
@@ -32,17 +32,17 @@
             <li>
               <h2>Веб-сайты</h2>
               <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
-              <a href="#">ЗАКАЗАТЬ</a>
+              <a href="#">Заказать</a>
             </li>
             <li>
               <h2>Приложения</h2>
               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-              <a href="#">ЗАКАЗАТЬ</a>
+              <a href="#">Заказать</a>
             </li>
             <li>
               <h2>Презентации</h2>
               <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-              <a href="#">ЗАКАЗАТЬ</a>
+              <a href="#">Заказать</a>
             </li>
           </ul>
         </section>
@@ -62,15 +62,21 @@
         <section>
           <h2>Статистика компании</h2>
           <img src="img/nerds-illustration-1.png" alt="Логотип дизайн-студии «Nerds»" width="360" height="208">
-          <p><b>с 2004 года Любим точность во всем:</b></p>
-            <dl>
-              <dt>Уровень самоотдачи</dt>
-              <dd>146 <sup>%</sup></dd>
-              <dt>Соблюдение сроков</dt>
-              <dd>100 <sup>%</sup></dd>
-              <dt>Минимальная предоплата</dt>
-              <dd>50 <sup>%</sup></dd>
-            </dl>
+          <table>
+            <tr>
+              <th colspan="3"><b>с 2004 года Любим точность во всем:</b></th>
+            </tr>
+            <tr>
+              <td>Уровень самоотдачи</td>
+              <td>Соблюдение сроков</td>
+              <td>Минимальная предоплата</td>
+            </tr>
+            <tr>
+              <td>146 <sup>%</sup></td>
+              <td>100 <sup>%</sup></td>
+              <td>50 <sup>%</sup></td>
+            </tr>
+          </table>
         </section>
 
         <section>
@@ -83,14 +89,15 @@
           </ul>
         </section>
 
+        <!--Карта-->
+        <div>
+          <p><b>NЁRDS DESIGN STUDIO</b></p>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <p>тел.<a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
+          <a href="#">Напишите нам</a>
+        </div>
+        
         <footer>
-          <!--Карта-->
-          <div>
-            <p><b>NЁRDS DESIGN STUDIO</b></p>
-            <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-            <p>тел.<a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
-            <a href="#">НАПИШИТЕ НАМ</a>
-          </div>
           <ul>
             <li><a href="#"><img src="#" alt="Вконтакте"></a></li>
             <li><a href="#"><img src="#" alt="Фейсбук"></a></li>
@@ -100,7 +107,7 @@
             <p>Давайте дружить, это выгодно!</p>
             <p>Скидка 10% для друзей из социальных сетей.</p>
           </div>
-        </footer>
+          </footer>
     </main>
   </body>
 </html>
