Добавляет сортировку; Исправляет дивы карточек;

--- a/catalog.html
+++ b/catalog.html
@@ -87,56 +87,50 @@
                 <li><a href="#">По типу</a></li>
                 <li><a href="#">По названию</a></li>
               </ul>
+              <ul>
+                <li><a href="#">По возрастанию</a></li>
+                <li><a href="#">По убыванию</a></li>
+              </ul>
             </div>
               <ul>
                 <li>
                   <div>
-                    <a href="#">
-                      <h3>Туристический городок Седона</h3>
-                      <img src="img/catalog/catalog-sedona-1.png" alt="превью Седона" width="359" height="578">
-                    </a>
-                    <p>Информационный сайт для туристов</p>
-                    <a href="#">9 900 &#8381;</a>
+                    <a href="#"><h3>Туристический городок Седона</h3></a>
+                    <img src="img/catalog/catalog-sedona-1.png" alt="превью Седона" width="359" height="578">
+                    <div>
+                      <p>Информационный сайт для туристов</p>
+                      <a href="#">9 900 &#8381;</a>
+                    </div>
                   </div>
                 </li>
                 <li>
                   <div>
-                    <a href="#">
-                      <h3>Барбершоп Бородинский</h3>
-                      <img src="img/catalog/catalog-borodinski-1.png" alt="превью Бородинский" width="358" height="578">
-                    </a>
+                    <a href="#"><h3>Барбершоп Бородинский</h3></a>
+                    <img src="img/catalog/catalog-borodinski-1.png" alt="превью Бородинский" width="358" height="578">
                   </div>
                 </li>
                 <li>
                   <div>
-                    <a href="#">
-                      <h3>Курсы А Плюс</h3>
-                      <img src="img/catalog/catalog-aplus-1.png" alt="превью А Плюс" width="359" height="578">
-                    </a>
+                    <a href="#"><h3>Курсы А Плюс</h3></a>
+                    <img src="img/catalog/catalog-aplus-1.png" alt="превью А Плюс" width="359" height="578">
                   </div>
                 </li>
                 <li>
                   <div>
-                    <a href="#">
-                      <h3>Приложение Пинк</h3>
-                      <img src="img/catalog/catalog-pink-1.png" alt="превью Пинк" width="358" height="578">
-                    </a>
+                    <a href="#"><h3>Приложение Пинк</h3></a>
+                    <img src="img/catalog/catalog-pink-1.png" alt="превью Пинк" width="358" height="578">
                   </div>
                 </li>
                 <li>
                   <div>
-                    <a href="#">
-                      <h3>Вязаные штуки Мишка</h3>
-                      <img src="img/catalog/catalog-mishka-1.png" alt="превью Мишка" width="359" height="578">
-                    </a>
+                    <a href="#"><h3>Вязаные штуки Мишка</h3></a>
+                    <img src="img/catalog/catalog-mishka-1.png" alt="превью Мишка" width="359" height="578">
                   </div>
                 </li>
                 <li>
                   <div>
-                    <a href="#">
-                      <h3>Крафтовый квас Кваст</h3>
-                      <img src="img/catalog/catalog-kvast-1.png" alt="превью Кваст" width="359" height="578">
-                    </a>
+                    <a href="#"><h3>Крафтовый квас Кваст</h3></a>
+                    <img src="img/catalog/catalog-kvast-1.png" alt="превью Кваст" width="359" height="578">
                   </div>
                 </li>
               </ul>
