Добавляет контентные изображения с правильными расширениями; Добавляет иконки; Добавляет фоновые изображения; Добавляет фавиконки; Добавляет манифест для фавиконок;

--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Дизайн-студия «Нёрдс»: Каталог готовых шаблонов</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
     <header>
@@ -96,7 +100,7 @@
                 <li>
                   <div>
                     <a href="#"><h3>Туристический городок Седона</h3></a>
-                    <img src="img/catalog/catalog-sedona-1.png" alt="превью Седона" width="359" height="578">
+                    <img src="img/catalog/catalog-sedona-1.jpg" alt="превью Седона" width="358" height="577">
                     <div>
                       <p>Информационный сайт для туристов</p>
                       <a href="#">9 900 &#8381;</a>
@@ -106,31 +110,31 @@
                 <li>
                   <div>
                     <a href="#"><h3>Барбершоп Бородинский</h3></a>
-                    <img src="img/catalog/catalog-borodinski-1.png" alt="превью Бородинский" width="358" height="578">
+                    <img src="img/catalog/catalog-barbershop-1.jpg" alt="превью Бородинский" width="358" height="578">
                   </div>
                 </li>
                 <li>
                   <div>
                     <a href="#"><h3>Курсы А Плюс</h3></a>
-                    <img src="img/catalog/catalog-aplus-1.png" alt="превью А Плюс" width="359" height="578">
+                    <img src="img/catalog/catalog-aplus-1.jpg" alt="превью А Плюс" width="358" height="578">
                   </div>
                 </li>
                 <li>
                   <div>
                     <a href="#"><h3>Приложение Пинк</h3></a>
-                    <img src="img/catalog/catalog-pink-1.png" alt="превью Пинк" width="358" height="578">
+                    <img src="img/catalog/catalog-pink-1.jpg" alt="превью Пинк" width="358" height="578">
                   </div>
                 </li>
                 <li>
                   <div>
                     <a href="#"><h3>Вязаные штуки Мишка</h3></a>
-                    <img src="img/catalog/catalog-mishka-1.png" alt="превью Мишка" width="359" height="578">
+                    <img src="img/catalog/catalog-mishka-1.jpg" alt="превью Мишка" width="358" height="578">
                   </div>
                 </li>
                 <li>
                   <div>
                     <a href="#"><h3>Крафтовый квас Кваст</h3></a>
-                    <img src="img/catalog/catalog-kvast-1.png" alt="превью Кваст" width="359" height="578">
+                    <img src="img/catalog/catalog-kvast-1.jpg" alt="превью Кваст" width="358" height="578">
                   </div>
                 </li>
               </ul>
