--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>Дизайн-студия «Нёрдс»</title>
+    <link rel="icon" href="favicon.ico">
+    <link rel="icon" href="img/favicon/icon.svg" type="image/svg+xml">
+    <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
+    <link rel="manifest" href="/manifest.webmanifest">
   </head>
   <body>
     <header>
@@ -82,10 +86,10 @@
         <section>
           <h2>Проекты компании</h2>
           <ul>
-            <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/pr-ha-logo.svg" alt="HTML Academy" width="200" height="68"></a></li>
-            <li><a href="#"><img src="img/pr-borodinski-logo.svg" alt="Барбершоп Бородинский" width="209" height="90"></a></li>
-            <li><a href="#"><img src="img/pr-pink-logo.svg" alt="Приложение Пинк" width="185" height="52"></a></li>
-            <li><a href="#"><img src="img/pr-mishka-logo.svg" alt="Вязаные штуки Мишка" width="173" height="84"></a></li>
+            <li><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-ha.png" alt="HTML Academy" width="199" height="68"></a></li>
+            <li><a href="#"><img src="img/logo-barbershop.png" alt="Барбершоп Бородинский" width="209" height="90"></a></li>
+            <li><a href="#"><img src="img/logo-pink.png" alt="Приложение Пинк" width="185" height="52"></a></li>
+            <li><a href="#"><img src="img/logo-mishka.png" alt="Вязаные штуки Мишка" width="173" height="84"></a></li>
           </ul>
         </section>
 
@@ -96,7 +100,7 @@
           <p>тел.<a href="tel:+78122757575">+7 (812) 275-75-75</a></p>
           <a href="#">Напишите нам</a>
         </div>
-        
+
         <footer>
           <ul>
             <li><a href="#"><img src="#" alt="Вконтакте"></a></li>
