Добавляет иллюстрации услуг

--- a/index.html
+++ b/index.html
@@ -34,16 +34,19 @@
           <h2>Список услуг</h2>
           <ul>
             <li>
+              <img src="img/index-websites.jpg" alt="Веб-сайты" width="300" height="146">
               <h2>Веб-сайты</h2>
               <p>Мир никогда не будет прежним после того как увидит ваш сайт!</p>
               <a href="#">Заказать</a>
             </li>
             <li>
+              <img src="img/index-apps.jpg" alt="Приложения" width="300" height="146">
               <h2>Приложения</h2>
               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
               <a href="#">Заказать</a>
             </li>
             <li>
+              <img src="img/index-presentations.jpg" alt="Презентации" width="300" height="146">
               <h2>Презентации</h2>
               <p>Вы даже не подозреваете, насколько вы изумительны!</p>
               <a href="#">Заказать</a>
