Добавляет стили кнопок

--- a/index.html
+++ b/index.html
@@ -47,13 +47,13 @@
               <img src="img/index-apps.jpg" alt="Приложения" width="300" height="146">
               <h2>Приложения</h2>
               <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-              <a class="button" href="#">Заказать</a>
+              <a class="button button-green"  href="#">Заказать</a>
             </li>
             <li class="services-item">
               <img src="img/index-presentations.jpg" alt="Презентации" width="300" height="146">
               <h2>Презентации</h2>
               <p>Вы даже не подозреваете, насколько вы изумительны!</p>
-              <a class="button" href="#">Заказать</a>
+              <a class="button button-yellow" href="#">Заказать</a>
             </li>
           </ul>
         </section>
@@ -62,7 +62,7 @@
           <h2>Информация о компании</h2>
           <p class="secondary-slogan">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
           <p>Исповедуем принципы минимализма и чистоты. Ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
-          <p><b>Выполняем заказы на разработку:</b></p>
+          <p class="bold-list-heading">Выполняем заказы на разработку:</p>
             <ul class="about-list">
               <li class="about-item">Веб-сайтов любой сложности</li>
               <li class="about-item">Мобильных приложений для iOS и Android</li>
@@ -75,35 +75,35 @@
           <img src="img/nerds-illustration-1.png" alt="Логотип дизайн-студии «Nerds»" width="360" height="208">
           <table class="stats-table">
             <tr class="stats-heading-row">
-              <th class="stats-heading-item" colspan="3"><b>с 2004 года Любим точность во всем:</b></th>
+              <th class="bold-list-heading" class="stats-heading-item" colspan="3">с 2004 года любим точность во всем:</th>
             </tr>
             <tr class="stats-row">
-              <td class="stats-item">Уровень самоотдачи</td>
-              <td class="stats-item">Соблюдение сроков</td>
-              <td class="stats-item">Минимальная предоплата</td>
+              <td class="stats-item-descripton">Уровень самоотдачи</td>
+              <td class="stats-item-descripton">Соблюдение сроков</td>
+              <td class="stats-item-descripton">Минимальная предоплата</td>
             </tr>
             <tr class="stats-row">
-              <td class="stats-item">146 <sup>%</sup></td>
-              <td class="stats-item">100 <sup>%</sup></td>
-              <td class="stats-item">50 <sup>%</sup></td>
+              <td class="stats-item">146 <span>%</span></td>
+              <td class="stats-item">100 <span>%</span></td>
+              <td class="stats-item">50 <span>%</span></td>
             </tr>
           </table>
         </section>
 
         <section class="products-company">
           <h2>Проекты компании</h2>
-          <ul products-list>
-            <li products-item><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-ha.png" alt="HTML Academy" width="199" height="68"></a></li>
-            <li products-item><a href="#"><img src="img/logo-barbershop.png" alt="Барбершоп Бородинский" width="209" height="90"></a></li>
-            <li products-item><a href="#"><img src="img/logo-pink.png" alt="Приложение Пинк" width="185" height="52"></a></li>
-            <li products-item><a href="#"><img src="img/logo-mishka.png" alt="Вязаные штуки Мишка" width="173" height="84"></a></li>
+          <ul class="products-list">
+            <li class="products-item"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-ha.png" alt="HTML Academy" width="199" height="68"></a></li>
+            <li class="products-item"><a href="#"><img src="img/logo-barbershop.png" alt="Барбершоп Бородинский" width="209" height="90"></a></li>
+            <li class="products-item"><a href="#"><img src="img/logo-pink.png" alt="Приложение Пинк" width="185" height="52"></a></li>
+            <li class="products-item"><a href="#"><img src="img/logo-mishka.png" alt="Вязаные штуки Мишка" width="173" height="84"></a></li>
           </ul>
         </section>
 
         <!--Карта-->
 
         <div class="contacts">
-          <p><b>NЁRDS DESIGN STUDIO</b></p>
+          <p class="contacts-heading">NЁRDS DESIGN STUDIO</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
           <p>тел.<a class="contacts-phone" href="tel:+78122757575">+7 (812) 275-75-75</a></p>
           <a class="button" href="#">Напишите нам</a>
@@ -112,13 +112,13 @@
         <!--Напишите нам-->
 
         <footer class="page-footer">
-          <ul social-links-list>
-            <li social-links-button><a href="#"><img src="#" alt="Вконтакте"></a></li>
-            <li social-links-button><a href="#"><img src="#" alt="Фейсбук"></a></li>
-            <li social-links-button><a href="#"><img src="#" alt="Инстаграм"></a></li>
+          <ul class="social-links-list">
+            <li class="social-links-button"><a href="#"><img src="img/icons/icon-vk.svg" alt="Вконтакте"></a></li>
+            <li class="social-links-button"><a href="#"><img src="img/icons/icon-fb.svg" alt="Фейсбук"></a></li>
+            <li class="social-links-button"><a href="#"><img src="img/icons/icon-insta.svg" alt="Инстаграм"></a></li>
           </ul>
-          <div footer-discount>
-            <p>Давайте дружить, это выгодно!</p>
+          <div class="footer-discount">
+            <p class="footer-discount-heading">Давайте дружить, это выгодно!</p>
             <p>Скидка 10% для друзей из социальных сетей.</p>
           </div>
           </footer>
