Добавляет изображения слайдера

--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <link rel="apple-touch-icon" href="img/favicon/apple-touch-icon.png">
     <link rel="manifest" href="/manifest.webmanifest">
   </head>
+
   <body class="page-body">
+
     <header class="main-header">
       <nav class="main-navigation">
         <a class="main-header-logo" href="#"><img src="img/nerds-logo.svg" alt="Логотип дизайн-студии «Nerds»" width="160" height="65"></a>
@@ -23,10 +25,19 @@
           <li><a href="#">Корзина</a></li>
         </ul>
       </nav>
+
+      <!-- <section class="slider">
+        <h2>Слайдер дизайн-студии «Nerds»</h2>
+          <div class="slider-wrapper">
+            <div class="slider-item">
+
+            </div>
+          </div>
+      </section> -->
     </header>
+
     <main class="container">
       <h1>Сайт дизайн-студии «Nerds»</h1>
-
         <section class="services-heading">
           <h2>Описание услуг</h2>
           <p class="primary-slogan">Долго, дорого, скрупулезно.</p>
